<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#040F2D"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_gravity="center"
                android:text="@string/password_generator"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/generated_password"
                android:textColor="#525E83"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background"
                android:gravity="center"
                android:hint="@string/click_generate"
                android:padding="2dp"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#414E71"
                android:textIsSelectable="true"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/length"
                android:textColor="#525E83"
                android:textSize="12sp" />


            <LinearLayout
                android:id="@+id/slider_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/_4"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/seekBar"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:stepSize="1"
                    android:value="8"
                    android:valueFrom="4"
                    android:valueTo="32"
                    app:labelBehavior="floating"
                    app:tickVisible="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/_32"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/include"
                android:textColor="#525E83"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/uppercase_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/include_uppercase"
                    android:textColor="#C7D3EF"
                    android:textSize="17sp" />


                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/uppercase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:theme="@style/SwitchTheme"
                    app:thumbTint="@color/white"

                    app:track="@drawable/switch_background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lowercase_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/include_lowercase"
                    android:textColor="#C7D3EF"
                    android:textSize="17sp" />


                <Space
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="InefficientWeight" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/lowercase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SwitchTheme"
                    app:thumbTint="@color/white"
                    app:track="@drawable/switch_background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/include_numbers"
                    android:textColor="#C7D3EF"
                    android:textSize="17sp" />


                <Space
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="InefficientWeight" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SwitchTheme"
                    app:thumbTint="@color/white"
                    app:track="@drawable/switch_background" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/symbols_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/include_symbols"
                    android:textColor="#C7D3EF"
                    android:textSize="17sp" />


                <Space
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="InefficientWeight" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/symbols"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/SwitchTheme"
                    app:thumbTint="@color/white"
                    app:track="@drawable/switch_background" />
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="300dp"
                android:background="@drawable/button_background"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/generate_password" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>